--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "url shortner",
   "main": "index.js",
   "scripts": {
+	"build:watch": "tsc -w",
+	"dev": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
