--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
 	"description": "url shortner",
 	"main": "index.js",
 	"scripts": {
-		"build:watch": "tsc -w",
-		"dev": "nodemon ./dist/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node ./dist/index.js",
+		"dev": "ts-node ./src/index.ts",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc",
+		"build:watch": "tsc -w"
 	},
 	"author": "",
 	"license": "ISC",
@@ -18,15 +20,15 @@
 		"dotenv": "^16.3.1",
 		"eslint": "^7.8.1",
 		"express": "^4.17.1",
-		"mongoose": "^5.10.6",
+		"mongoose": "5.10.5",
 		"nodemon": "^2.0.4",
 		"shortid": "^2.2.15",
 		"tslint": "^6.1.3",
 		"typescript": "^4.0.2"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.8",
-		"@types/mongoose": "^5.7.36",
+		"@types/express": "4.17.8",
+		"@types/mongoose": "5.10.5",
 		"@types/shortid": "0.0.29"
 	}
 }
