--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"typescript": "^4.0.2"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "4.17.8",
 		"@types/mongoose": "5.10.5",
 		"@types/shortid": "0.0.29"
