--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "4.17.8",
 		"@types/mongoose": "5.10.5",
-		"@types/shortid": "0.0.29"
+		"@types/shortid": "0.0.29",
+		"ts-node": "^10.9.2"
 	}
 }
