--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,16 @@
-version: '3'
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - ./data:/data/db
+  database:
+    container_name: database-postgres
+    image: postgres:16
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: UW6vZjBz7HTwVdyfMAGCRY
+      POSTGRES_USER: user123
+      POSTGRES_PASSWORD: password123*&
+      POSTGRES_DB: database
+    ports:
+      - "5432:5432"
+    volumes:
+      - database-postgres:/var/lib/postgresql/data
+
+volumes:
+  database-postgres:
+    driver: local
