--- a/package.json
+++ b/package.json
@@ -6,30 +6,26 @@
 	"scripts": {
 		"start": "node ./dist/index.js",
 		"dev": "ts-node ./src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
-		"build:watch": "tsc -w"
+		"migration:generate": "node scripts/migration-generate.js",
+		"migration:run": "node scripts/migration-run.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@hasezoey/typegoose": "^5.9.2",
-		"@typescript-eslint/eslint-plugin": "^4.0.1",
-		"@typescript-eslint/parser": "^4.0.1",
 		"cors": "^2.8.5",
-		"dotenv": "^16.3.1",
-		"eslint": "^7.8.1",
-		"express": "^4.17.1",
-		"mongoose": "5.10.5",
-		"nodemon": "^2.0.4",
-		"shortid": "^2.2.15",
-		"tslint": "^6.1.3",
-		"typescript": "^4.0.2"
+		"dotenv": "^16.4.7",
+		"eslint": "^7.32.0",
+		"express": "^4.21.2",
+		"pg": "^8.13.1",
+		"shortid": "^2.2.17",
+		"typeorm": "^0.3.20",
+		"typescript": "^4.9.5"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "4.17.8",
-		"@types/mongoose": "5.10.5",
+		"@types/pg": "^8.11.11",
 		"@types/shortid": "0.0.29",
 		"ts-node": "^10.9.2"
 	}
