--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,28 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"_version": "20.1.0",
 	"compilerOptions": {
-		"baseUrl": "./src",
+		"lib": [
+			"es2020",
+			"dom"
+		],
+		"target": "ES2020",
 		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"noEmit": false,
-		"noEmitOnError": false,
-		"alwaysStrict": true,
 		"esModuleInterop": true,
-		"module": "commonjs",
-		"noImplicitAny": true,
-		"target": "ES6",
-		"removeComments": true,
-		"preserveConstEnums": true,
 		"outDir": "./dist",
 		"rootDir": "./src/",
-		"sourceMap": true,
-		"lib": ["es6", "dom", "es2017", "es7"],
-		"resolveJsonModule": true,
+		"baseUrl": "./",
+		"paths": {
+			"@/*": [
+				"src/*"
+			]
+		},
+		"module": "commonjs",
 		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true
-	}
+		"emitDecoratorMetadata": true,
+		"sourceMap": true,
+	},
+	"exclude": [
+		"node_modules/**/*",
+	],
 }
