--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
 	"name": "url-shortner",
 	"version": "1.0.0",
 	"description": "url shortner",
-	"main": "index.js",
+	"type": "module",
+	"main": "./dist/index.js",
 	"scripts": {
-		"start": "node ./dist/index.js",
+		"start": "tsc && node ./dist/index.js",
 		"dev": "ts-node ./src/index.ts",
 		"build": "tsc",
 		"migration:generate": "node scripts/migration-generate.js",
@@ -25,6 +26,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "4.17.8",
+		"@types/node": "^22.10.10",
 		"@types/pg": "^8.11.11",
 		"@types/shortid": "0.0.29",
 		"ts-node": "^10.9.2"
