--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-MONGO_CONNECTION="..."
-API_URL="http://localhost:5000"
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=database
+DB_USER=user123
+DB_PASS=password123*&
