--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
 	"name": "url-shortner",
 	"version": "1.0.0",
 	"description": "url shortner",
-	"type": "module",
-	"main": "./dist/index.js",
+	"main": "index.js",
 	"scripts": {
-		"start": "tsc && node ./dist/index.js",
-		"dev": "ts-node ./src/index.ts",
+		"start": "node ./dist/index.js",
+		"dev": "nodemon --exec ts-node ./src/index.ts",
 		"build": "tsc",
 		"migration:generate": "node scripts/migration-generate.js",
 		"migration:run": "node scripts/migration-run.js"
@@ -19,6 +18,7 @@
 		"eslint": "^7.32.0",
 		"express": "^4.21.2",
 		"pg": "^8.13.1",
+		"reflect-metadata": "^0.2.2",
 		"shortid": "^2.2.17",
 		"typeorm": "^0.3.20",
 		"typescript": "^4.9.5"
@@ -29,6 +29,7 @@
 		"@types/node": "^22.10.10",
 		"@types/pg": "^8.11.11",
 		"@types/shortid": "0.0.29",
+		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2"
 	}
 }
