--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,32 @@
 {
-	"$schema": "https://json.schemastore.org/tsconfig",
-	"_version": "20.1.0",
 	"compilerOptions": {
+		"target": "es2018",
 		"lib": [
-			"es2020",
-			"dom"
+			"es5",
+			"es6",
+			"ES2018"
 		],
-		"target": "ES2020",
-		"moduleResolution": "node",
-		"esModuleInterop": true,
-		"outDir": "./dist",
-		"rootDir": "./src/",
-		"baseUrl": "./",
-		"paths": {
-			"@/*": [
-				"src/*"
-			]
-		},
-		"module": "commonjs",
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"sourceMap": true,
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"allowJs": true,
+		"outDir": "./dist",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"strictPropertyInitialization": false
 	},
-	"exclude": [
-		"node_modules/**/*",
+	"include": [
+		"src/**/*"
 	],
+	"exclude": [
+		"node_modules",
+		"dist"
+	],
+	"ts-node": {
+		"files": true
+	}
 }
