--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,22 @@ services:
       - "5432:5432"
     volumes:
       - database-postgres:/var/lib/postgresql/data
+  
+  api:
+    container_name: api
+    build: .
+    ports:
+      - 5000:5000
+    depends_on:
+      - database
+    environment:
+      DB_HOST: database
+      DB_PORT: 5432
+      DB_NAME: database
+      DB_USER: user123
+      DB_PASS: password123*&
+      NODE_ENV: development
+      PORT: 5000
 
 volumes:
   database-postgres:
